--- a/index.css
+++ b/index.css
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="index.css"   
-    </head>
-
-    <body>\
-        <h1>Hello WOrld!</h1>
-    </body>
-</html>
+h1{
+    color: blue;
+}
